samples/_failures_safe/1761283828_f6df08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1822c0d.c: In function ‘main’:
./samples/SAFE/__tmp_f1822c0d.c:172:5: error: expected expression at end of input
  172 |     if (
      |     ^~
./samples/SAFE/__tmp_f1822c0d.c:172:5: error: expected declaration or statement at end of input
